# PythonInteractiveRobotics

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_improvement.yml  example_request.yml
.github/workflows/: ci.yml  pages.yml
docs/: example_authoring.md  example_roadmap.md  goal_commands.md  implementation_gap_audit.md  index.html  learning_paths.md  philosophy.md  plan.md  playground.css  playground.html  playground.js  public_launch.md  ros2_bridge_strategy.md  simulator_integration_strategy.md  site.css  status.md  toy_worlds.md  trace.md
examples/: README.md
examples/embodied_ai/: 01_goal_command_pick.py  10_door_search_pomdp.py  18_goal_conditioned_minikitchen.py  19_tiny_vla_loop.py  21_object_permanence_toy.py  22_where_did_i_see_it.py  28_curiosity_grid_exploration.py  32_empowerment_navigation.py  33_inverse_reward_from_demo.py  35_clarifying_question.py  36_household_task_agent.py  README.md
examples/manipulation/: 01_pick_and_retry.py  02_reactive_grasping.py  03_closed_loop_ik.py  06_push_then_grasp.py  (+8 more)
notebooks/: README.md  clarifying_question.ipynb  household_task_agent.ipynb  human_correction_replanning.ipynb  pick_and_retry.ipynb  safety_filter_cbf.ipynb
pir/: __init__.py
scripts/: make_gifs.py  run_all_smoke_tests.py
tests/: test_colab_notebooks.py  test_examples_smoke.py  test_failure_contracts.py  test_grid_world.py  test_gymnasium_adapter.py  test_markdown_assets.py  test_planning.py  test_playground_assets.py  test_tabletop_2d.py  test_trace_summary.py
(+39 files in other folders)
